--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,23 @@ python-dotenv>=1.0
 selenium>=4.0
 tqdm>=4.65
 urllib3>=1.2
+# HTTP client and dependency utilities
+requests>=2.28
+urllib3>=1.2
+
+# HTML parsing
+beautifulsoup4>=4.11
+lxml>=4.9
+
+# Selenium for browser automation
+selenium>=4.0
+webdriver-manager>=3.8
+
+# Progress bars
+tqdm>=4.65
+
+# Environment variable loading
+python-dotenv>=1.0
+
+# Anki deck generation
+genanki>=0.13
