--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,62 @@
-requests>=2.28
-beautifulsoup4>=4.11
-genanki>=0.13
-python-dotenv>=1.0
-selenium>=4.0
-tqdm>=4.65
-urllib3>=1.2
-# HTTP client and dependency utilities
-requests>=2.28
-urllib3>=1.2
+# Core HTTP and web scraping
+requests>=2.28.0
+urllib3>=1.26.0
+beautifulsoup4>=4.11.0
+lxml>=4.9.0
 
-# HTML parsing
-beautifulsoup4>=4.11
-lxml>=4.9
-
-# Selenium for browser automation
-selenium>=4.0
-webdriver-manager>=3.8
-
-# Progress bars
-tqdm>=4.65
-
-# Environment variable loading
-python-dotenv>=1.0
+# Browser automation
+selenium>=4.15.0
+webdriver-manager>=4.0.0
 
 # Anki deck generation
-genanki>=0.13
+genanki>=0.13.0
+
+# Progress bars and user interface
+tqdm>=4.65.0
+colorama>=0.4.6
+
+# Environment and configuration
+python-dotenv>=1.0.0
+
+# Data processing and parsing
+pandas>=1.5.0
+numpy>=1.24.0
+html5lib>=1.1
+
+# Image processing (for potential future image support)
+Pillow>=9.5.0
+
+# JSON and data validation
+jsonschema>=4.17.0
+pydantic>=2.0.0
+
+# Logging and debugging
+loguru>=0.7.0
+
+# Security and encoding
+cryptography>=41.0.0
+chardet>=5.1.0
+
+# Network and SSL handling
+certifi>=2023.0.0
+
+# Additional utilities
+click>=8.1.0
+pathlib2>=2.3.7; python_version < "3.4"
+typing-extensions>=4.5.0
+
+# Development and testing (optional but useful)
+pytest>=7.3.0
+pytest-cov>=4.1.0
+black>=23.3.0
+flake8>=6.0.0
+
+# HTML/XML processing alternatives
+html-parser>=0.2.0
+selectolax>=0.3.0
+
+# Date and time handling
+python-dateutil>=2.8.0
+
+# File handling and compression
+zipfile36>=0.1.3; python_version < "3.6"
