Refactor show_card_content script to handle APKG extraction and improve content display
- Updated the script to extract the APKG file as a zip archive and locate the .anki2 database file.
- Enhanced the content extraction logic to display more fields and improved text extraction from HTML.
- Increased the character limit for displaying the front text to 800 characters for better visibility.
- Added error handling for missing .anki2 files and improved overall exception handling.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ webdriver-manager>=4.0.0
 # Anki deck generation
 genanki>=0.13.0
 
+# Image processing for portrait detection
+Pillow>=10.0.0
+
 # Progress bars and user interface
 tqdm>=4.65.0
 
