--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ requests>=2.28.0
 urllib3>=1.26.0
 beautifulsoup4>=4.11.0
 
+# Async HTTP for performance improvements
+aiohttp>=3.8.0
+aiofiles>=23.0.0
+
 # Browser automation
 selenium>=4.15.0
 webdriver-manager>=4.0.0
